--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
   min-height: 100vh;
-  background: #3d3f41;
-  background: linear-gradient(132deg, #3d3f41 6%, #384a52 61%, #4a4c4e 95%);
+  background: rgb(167,7,255);
+  background: radial-gradient(circle, rgba(167,7,255,1) 0%, rgba(63,94,251,1) 99%);
   font-family: "Lato", sans-serif;
   padding: 100px 20px;
 }
